--- a/brynhild.adoc
+++ b/brynhild.adoc
@@ -5,7 +5,7 @@ Det säges, att Brynhild åkte med vagnen på vägen till dödsriket och for om 
 
 == Brynhild for vägen till dödsriket.
 
-image::ed0039.jpg[]
+image::ed0039.jpg[align="center"]
 
 Jättinnan sade:
 
