--- a/griper.adoc
+++ b/griper.adoc
@@ -550,7 +550,7 @@ den sluga söker
 med svek att hämnas.»
 
 .Brynhild och Gudrun
-image::ed0031.jpg[]
+image::ed0031.jpg[align="center"]
 
 Sigurd sade:
 
