--- a/helge.adoc
+++ b/helge.adoc
@@ -482,7 +482,7 @@ vad denna gång
 till gagn ej var.»
 
 .Helge, Svava och Sigar
-image::ed0027.jpg[]
+image::ed0027.jpg[align="center"]
 
 Helge sade:
 
