--- a/gratte.adoc
+++ b/gratte.adoc
@@ -171,7 +171,7 @@ Vi draga fredskvarnen,
 dystert är hos Frode.
 
 .Grottekvarnen
-image::ed0045.jpg[]
+image::ed0045.jpg[align="center"]
 
 [verse]
 17. Händerna skola vila, 
