Fix missing verse tag

--- a/loketrata.adoc
+++ b/loketrata.adoc
@@ -18,6 +18,7 @@ Man lovordade mycket, huru goda Ägers tjänare voro.
 Loke tålte icke höra detta utan slog ihjäl Fimafeng.
 Då skakade asarne sina sköldar och skreko åt Loke och jagade honom bort till skogen, och sedan gingo de åter att dricka, Loke skyndade tillbaka och träffade Elder ute; Loke tilltalade honom:
 
+[verse]
 1. »Säg du mig, Elder, 
 utan att ett enda 
 steg du framåt stiger, 
